<resources>
    <string name="app_name">Notes</string>
    <string name="pref_size">Стиль для шрифта</string>
    <string name="pref_color">Цвет текста</string>
    <string name="pref_color_black">Черный</string>
    <string name="pref_color_yellow">Желтый</string>
    <string name="pref_color_green">Зеленый</string>
    <string name="pref_color_red">Красный</string>
    <string name="search">Поиск</string>

</resources>
